--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@babel/preset-env": "^7.0.0",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
+    "react-redux": "^6.0.0",
+    "redux": "^4.0.1",
     "webpack": "^3.5.3"
   },
   "devDependencies": {
